feat(admin): add study form with quotas
