# services/api/src/studies/studies.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Param, Post } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post, Put } from '@nestjs/common';
 import { StudiesService } from './studies.service';
 import { CreateStudyDto, StudyDto } from './dto/create-study.dto';
 import { ApiTags } from '@nestjs/swagger';
@@ -21,5 +21,10 @@ export class StudiesController {
   @Get(':id')
   findOne(@Param('id') id: string): StudyDto {
     return this.service.findOne(id);
+  }
+
+  @Put(':id')
+  update(@Param('id') id: string, @Body() dto: CreateStudyDto): StudyDto {
+    return this.service.update(id, dto);
   }
 }
